--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <h1>hello, welcome!</h1>
   </head>
   <body>
-    this is all a test
+    <table>
+      <tr>
+        <th colspan="2"> <b>Projects</b></th>
+      </tr>
+      <tr>
+        <th>name</th>
+        <th>link</th>
+      </tr>
+      <tr>
+        <td>helllo</td>
+      </tr>
+    </table>
   </body>
 </html>
